# college-qt

./: CMakeLists.txt  README.md  qtquickcontrols2.conf
src/: App.cpp  App.h  Test.h  main.cpp
src/classes/: RestApi.cpp  RestApi.h
src/model/: StudentsModel.cpp  StudentsModel.h  TeachersModel.cpp  TeachersModel.h
src/qml/: Main.qml  MainView.qml  StudentsView.qml  TeachersView.qml
